--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 </head>
 
@@ -100,18 +99,214 @@
                 </div>
             </div>
             <div class="clever-proect">
-            	<div class="container">
-            		<div class="clever-proect__row">
-            			<div class="clever-proect__column">
-            				<div class="clever-proect__title">САМЫЕ УМНЫЕ ПРОЕКТЫ</div>
-            				<div class="clever-proect__subtitle">РЕАЛИЗУЕМ САМЫЕ СМЕЛЫЕ РЕШЕНИЯ В РОССИИ!</div>
-            			</div>
-            			<div class="clever-proect__column btn">
-            				<button class="btn__list"><img src="image/main/listt.svg" alt=""></button>
-            				<button class="btn__list">Ваш запрос</button>
-            			</div>
-            		</div>
-            	</div>
+                <div class="container">
+                    <div class="clever-proect__row">
+                        <div class="clever-proect__column">
+                            <div class="clever-proect__title">САМЫЕ УМНЫЕ ПРОЕКТЫ</div>
+                            <div class="clever-proect__subtitle">РЕАЛИЗУЕМ САМЫЕ СМЕЛЫЕ РЕШЕНИЯ В РОССИИ!</div>
+                        </div>
+                        <div class="clever-proect__column btn">
+                            <button class="btn__list"><img src="image/main/listt.svg" alt=""></button>
+                            <button class="btn__list">Ваш запрос</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="doing-proect">
+                <div class="container">
+                    <div class="doing-proect__title">ЧЕМ МЫ ЗАНИМАЕМСЯ?</div>
+                    <div class="doing-proect__row">
+                        <div class="doing-proect__column">
+                            <div class="proect-doing">
+                                <div class="proect-doing__image">
+                                    <img src="image/main/build.svg" alt="">
+                                </div>
+                                <div class="proect-doing__text">СТРОИТЕЛЬСТВО ОФИСНЫХ ЗДАНИЙ</div>
+                            </div>
+                        </div>
+                        <div class="doing-proect__column">
+                            <div class="proect-doing">
+                                <div class="proect-doing__image">
+                                    <img src="image/main/build.svg" alt="">
+                                </div>
+                                <div class="proect-doing__text">СТРОИТЕЛЬСТВО ОФИСНЫХ ЗДАНИЙ</div>
+                            </div>
+                        </div>
+                        <div class="doing-proect__column">
+                            <div class="proect-doing">
+                                <div class="proect-doing__image">
+                                    <img src="image/main/build.svg" alt="">
+                                </div>
+                                <div class="proect-doing__text">СТРОИТЕЛЬСТВО ОФИСНЫХ ЗДАНИЙ</div>
+                            </div>
+                        </div>
+                        <div class="doing-proect__column">
+                            <div class="proect-doing">
+                                <div class="proect-doing__image">
+                                    <img src="image/main/build.svg" alt="">
+                                </div>
+                                <div class="proect-doing__text">СТРОИТЕЛЬСТВО ОФИСНЫХ ЗДАНИЙ</div>
+                            </div>
+                        </div>
+                        <div class="doing-proect__column">
+                            <div class="proect-doing">
+                                <div class="proect-doing__image">
+                                    <img src="image/main/build.svg" alt="">
+                                </div>
+                                <div class="proect-doing__text">СТРОИТЕЛЬСТВО ОФИСНЫХ ЗДАНИЙ</div>
+                            </div>
+                        </div>
+                        <div class="doing-proect__column">
+                            <div class="proect-doing">
+                                <div class="proect-doing__image">
+                                    <img src="image/main/build.svg" alt="">
+                                </div>
+                                <div class="proect-doing__text">СТРОИТЕЛЬСТВО ОФИСНЫХ ЗДАНИЙ</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="show-proect">
+                <div class="show-proect__row">
+                    <div class="show-proect__column"><img src="image/main/mirror.png" alt=""></div>
+                    <div class="show-proect__column"><img src="image/main/mirror.png" alt=""></div>
+                    <div class="show-proect__column"><img src="image/main/mirror.png" alt=""></div>
+                    <div class="show-proect__column"><img src="image/main/mirror.png" alt=""></div>
+                    <div class="show-proect__column"><img src="image/main/mirror.png" alt=""></div>
+                    <div class="show-proect__column"><img src="image/main/mirror.png" alt=""></div>
+                    <div class="show-proect__column"><img src="image/main/mirror.png" alt=""></div>
+                    <div class="show-proect__column"><img src="image/main/mirror.png" alt=""></div>
+                </div>
+            </div>
+            <div class="answer">
+                <div class="container">
+                    <div class="answer__title">ОТВЕТЫ НА ВОПРОСЫ</div>
+                    <div class="answer__item">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</div>
+                    <div class="answer__item">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</div>
+                    <div class="answer__text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов. </div>
+                    <div class="answer__item">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</div>
+                    <div class="answer__item">РАБОТАЕТЕ ЛИ ВЫ ПО 249 ФЗ?</div>
+                </div>
+            </div>
+            <div class="partners">
+                <div class="container">
+                    <div class="partners__title">наши партнеры</div>
+                    <div class="partners__row">
+                        <div class="partners__column">
+                            <div class="brand">
+                                <div class="brand__image">
+                                    <img src="image/main/brand.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="partners__column">
+                            <div class="brand">
+                                <div class="brand__image">
+                                    <img src="image/main/brand.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="partners__column">
+                            <div class="brand">
+                                <div class="brand__image">
+                                    <img src="image/main/brand.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="partners__column">
+                            <div class="brand">
+                                <div class="brand__image">
+                                    <img src="image/main/brand.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="partners__column">
+                            <div class="brand">
+                                <div class="image/main/brand.png">
+                                    <img src="image/main/brand.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="rewievs">
+                <div class="container">
+                    <div class="rewievs__title">отзывы о работе с нами</div>
+                    <div class="rewievs__row">
+                        <div class="rewievs__column company">
+                            <div class="company__body">
+                                <div class="company__quotes">“</div>
+                                <div class="company__text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов.</div>
+                            </div>
+                            <div class="company__name">Иванов Иван, <span>ООО “Газпром-Арена”</span></div>
+                        </div>
+                        <div class="rewievs__column company">
+                            <div class="company__body">
+                                <div class="company__quotes">“</div>
+                                <div class="company__text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов.</div>
+                            </div>
+                            <div class="company__name">Иванов Иван, <span>ООО “Газпром-Арена”</span></div>
+                        </div>
+                        <div class="rewievs__column company">
+                            <div class="company__body">
+                                <div class="company__quotes">“</div>
+                                <div class="company__text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов.</div>
+                            </div>
+                            <div class="company__name">Иванов Иван, <span>ООО “Газпром-Арена”</span></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="clever-proect">
+                <div class="container">
+                    <div class="clever-proect__row">
+                        <div class="clever-proect__column">
+                            <div class="clever-proect__title">САМЫЕ УМНЫЕ ПРОЕКТЫ</div>
+                            <div class="clever-proect__subtitle">РЕАЛИЗУЕМ САМЫЕ СМЕЛЫЕ РЕШЕНИЯ В РОССИИ!</div>
+                        </div>
+                        <div class="clever-proect__column btn">
+                            <button class="btn__list"><img src="image/main/listt.svg" alt=""></button>
+                            <button class="btn__list">Ваш запрос</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="contacts">
+                <div class="container">
+                    <div class="contacts__title">Контакты</div>
+                    <div class="contacts__row">
+                        <div class="contacts__column item-contacts">
+                            <div class="item-contacts__icon">
+                                <img src="image/main/location.svg" alt="">
+                            </div>
+                            <div class="item-contacts__title">АДРЕС</div>
+                            <div class="item-contacts__info">НЕВСКИЙ ПРОСПЕКТ 140,<br>ОФИС 140-142</div>
+                        </div> 
+                        <div class="contacts__column item-contacts">
+                            <div class="item-contacts__icon">
+                                <img src="image/main/location.svg" alt="">
+                            </div>
+                            <div class="item-contacts__title">АДРЕС</div>
+                            <div class="item-contacts__info">НЕВСКИЙ ПРОСПЕКТ 140,<br>ОФИС 140-142</div>
+                        </div>
+                        <div class="contacts__column item-contacts">
+                            <div class="item-contacts__icon">
+                                <img src="image/main/location.svg" alt="">
+                            </div>
+                            <div class="item-contacts__title">АДРЕС</div>
+                            <div class="item-contacts__info">НЕВСКИЙ ПРОСПЕКТ 140,<br>ОФИС 140-142</div>
+                        </div>
+                        <div class="contacts__column item-contacts">
+                            <div class="item-contacts__icon">
+                                <img src="image/main/location.svg" alt="">
+                            </div>
+                            <div class="item-contacts__title">АДРЕС</div>
+                            <div class="item-contacts__info">НЕВСКИЙ ПРОСПЕКТ 140,<br>ОФИС 140-142</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
     </div>
